// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fallback to initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#ffffff",
          "fontFamily": "System",
          "fontWeight": "700",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    UN
  </Text>
</View>
`;

exports[`should render as circle with badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "testUri": "../../../src/avatar/default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "height": 10,
          "justifyContent": "center",
          "minWidth": 10,
        },
        Array [
          undefined,
          Object {
            "right": -2.5,
            "top": -2.5,
          },
          Object {
            "elevation": 1,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 1,
            "zIndex": 1,
          },
        ],
        Object {
          "height": 20,
          "minWidth": 20,
          "paddingHorizontal": 6,
        },
        Object {
          "borderRadius": 10,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontWeight": "400",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
          Object {
            "fontSize": 12,
          },
        ]
      }
    >
      1
    </Text>
  </View>
</View>
`;

exports[`should render as square with badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "testUri": "../../../src/avatar/default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007aff",
          "height": 10,
          "justifyContent": "center",
          "minWidth": 10,
        },
        Array [
          undefined,
          Object {
            "right": -2.5,
            "top": -2.5,
          },
          Object {
            "elevation": 1,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 1,
            "zIndex": 1,
          },
        ],
        Object {
          "borderRadius": 5,
        },
      ]
    }
  />
</View>
`;

exports[`should render default image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "testUri": "../../../src/avatar/default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
</View>
`;

exports[`should render default image if empty name 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
</View>
`;

exports[`should render default image if no gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
</View>
`;

exports[`should render default image if no image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
</View>
`;

exports[`should render gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "https://www.gravatar.com/avatar/b58c6f14d292556214bd64909bcdb118?s=100&d=404",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
</View>
`;

exports[`should render image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "borderRadius": 25,
        },
      ]
    }
  />
</View>
`;

exports[`should render image as square 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#ffffff",
          "fontFamily": "System",
          "fontWeight": "700",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    UN
  </Text>
</View>
`;
